tests/conformance/negative/22-contract-unknown-type.sml
<!-- Error: unknown field types are invalid -->
<skill define="contract" name="unknown-type">
  <field name="payload" type="array" />
</skill>
